--- a/thank-you.html
+++ b/thank-you.html
@@ -5,51 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Thank You | Iron Dillo Cybersecurity</title>
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+  
+  <!-- Tailwind & Font Config -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          armadilloBlack: "#1A1A1A",
-          armadilloGray: "#4A4A4A",
-          oliveGreen: "#6B7B3C",
-          oliveDark: "#55622F",
-          offWhite: "#F8F9FA"
-        },
-        fontFamily: {
-          inter: ["Inter", "sans-serif"]
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            armadilloBlack: "#1A1A1A",
+            armadilloGray: "#4A4A4A",
+            oliveGreen: "#6B7B3C",
+            oliveDark: "#55622F",
+            offWhite: "#F8F9FA"
+          },
+          fontFamily: {
+            inter: ["Inter", "sans-serif"]
+          }
         }
       }
     }
-  };
-</script>
+  </script>
 </head>
 <body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
-    <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+    <img src="/assets/irondillo-preview.png" alt="Iron Dillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
-    <div class="flex justify-between">
-      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between px-4">
+      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Contact</a>
     </div>
   </nav>
 
   <!-- Message -->
-  <main class="flex-grow max-w-xl w-full bg-armadilloGray rounded-lg p-8 shadow-lg mx-auto text-center">
+  <main class="flex-grow max-w-xl w-full bg-white rounded-lg p-8 shadow-lg mx-auto text-center">
     <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Thank You!</h1>
-    <p class="text-armadilloGray mb-8">Your message has been successfully sent. I'll get back to you soon.</p>
-    <a href="/index.html" class="text-oliveGreen hover:underline">Return to Home</a>
+    <p class="text-armadilloBlack mb-8">
+      Your message has been successfully sent. I'll get back to you soon.
+    </p>
+    <a href="/index.html" 
+       class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-md inline-block">
+       Return to Home
+    </a>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned |
     <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
     <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
