--- a/services.html
+++ b/services.html
@@ -5,36 +5,30 @@
   <title>Services | Iron Dillo Cybersecurity</title>
   <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting East Texas individuals and small businesses with practical, ethical solutions." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="preconnect" href="https://cdn.tailwindcss.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-<!-- 🛡 Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="X-Frame-Options" content="DENY">
-<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-<meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+
+  <!-- Fonts & Tailwind -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          armadilloBlack: "#1A1A1A",
-          armadilloGray: "#4A4A4A",
-          oliveGreen: "#6B7B3C",
-          oliveDark: "#55622F",
-          offWhite: "#F8F9FA"
-        },
-        fontFamily: {
-          inter: ["Inter", "sans-serif"]
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            armadilloBlack: "#1A1A1A",
+            armadilloGray: "#4A4A4A",
+            oliveGreen: "#6B7B3C",
+            oliveDark: "#55622F",
+            offWhite: "#F8F9FA"
+          },
+          fontFamily: {
+            inter: ["Inter", "sans-serif"]
+          }
         }
       }
     }
-  };
-</script>
+  </script>
   <style>
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     .fade-in { animation: fadeIn 1s ease-out both; }
@@ -45,64 +39,70 @@
   <!-- Logo Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+    <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
-    <div class="flex justify-between">
-      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+    <div class="flex justify-between px-4">
+      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Home</a>
+      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Services</a>
+      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">About</a>
+      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Contact</a>
     </div>
   </nav>
 
-  <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
-    <!-- Services Sections -->
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Consultations &amp; Risk Assessments</h2>
-      <p class="text-armadilloGray leading-relaxed">Identify your current vulnerabilities, understand cybersecurity threats in clear language, and receive actionable recommendations to strengthen your systems and protect your data.</p>
+  <!-- Services Grid -->
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 grid gap-8 md:grid-cols-2 fade-in">
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Consultations & Risk Assessments</h2>
+      <p class="text-armadilloBlack leading-relaxed">Identify vulnerabilities, understand risks, and receive actionable recommendations in plain English.</p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Cybersecurity Policy &amp; Documentation Support</h2>
-      <p class="text-armadilloGray leading-relaxed">Develop custom cybersecurity policies, standard operating procedures (SOPs), and incident response plans designed specifically for your operations to help you stay prepared and compliant.</p>
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Cybersecurity Policy & Documentation</h2>
+      <p class="text-armadilloBlack leading-relaxed">Develop custom policies, SOPs, and incident response plans designed for your operations.</p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Website &amp; Web Presence Security Audits</h2>
-      <p class="text-armadilloGray leading-relaxed">Audit your website, online forms, and public-facing content to find vulnerabilities such as cross-site scripting (XSS), misconfigurations, and other common security risks that could expose your business to cyberattacks.</p>
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Website & Web Presence Security Audits</h2>
+      <p class="text-armadilloBlack leading-relaxed">Audit websites, forms, and public content for vulnerabilities like XSS, misconfigurations, and more.</p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Personal &amp; Small Business Digital Security Training</h2>
-      <p class="text-armadilloGray leading-relaxed">One-on-one or small group training sessions covering phishing prevention, password safety, operational security basics, and other essential topics—delivered in straightforward, easy-to-understand language.</p>
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Personal & Small Business Security Training</h2>
+      <p class="text-armadilloBlack leading-relaxed">One-on-one or group training on phishing, password safety, and operational security basics.</p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Incident Response Guidance &amp; Remediation Assistance</h2>
-      <p class="text-armadilloGray leading-relaxed">If you experience a security incident, I’ll guide you through the response process, help identify the scope, and assist with remediation to minimize damage and restore security quickly.</p>
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Incident Response Guidance</h2>
+      <p class="text-armadilloBlack leading-relaxed">Step-by-step guidance during incidents to contain threats, minimize damage, and restore security.</p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Vulnerability Scanning &amp; Reporting</h2>
-      <p class="text-armadilloGray leading-relaxed">Thorough scans of your systems and networks to identify weaknesses, paired with clear, actionable reports outlining findings and recommended fixes.</p>
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Vulnerability Scanning & Reporting</h2>
+      <p class="text-armadilloBlack leading-relaxed">Comprehensive scans with actionable reports highlighting weaknesses and recommended fixes.</p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Secure Configuration of Devices &amp; Networks</h2>
-      <p class="text-armadilloGray leading-relaxed">Ensure your devices, routers, and networks are set up with security best practices to reduce risks and protect your digital environment.</p>
+    <section class="bg-white rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Secure Configuration</h2>
+      <p class="text-armadilloBlack leading-relaxed">Ensure devices, routers, and networks follow security best practices to reduce risks.</p>
     </section>
+  </main>
 
-    <section class="text-center mt-12">
-  <p class="text-oliveGreen font-semibold max-w-xl mx-auto">
-    Need more advanced support? From detailed risk assessments to full remediation assistance,
-    pricing is customized to fit your needs.<br />
-    <a href="/contact.html" class="underline hover:text-oliveGreen">Contact me</a> today for a free consultation and tailored quote.
-  </p>
-</section>
-    
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
+  <!-- CTA Section -->
+  <section class="text-center mt-12 max-w-2xl mx-auto fade-in">
+    <p class="text-armadilloGray font-semibold mb-4">
+      Need more advanced support? From detailed risk assessments to full remediation,
+      pricing is customized to fit your needs.
+    </p>
+    <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg">
+      Contact Me for a Free Consultation
+    </a>
+  </section>
+  
+  <!-- Footer -->
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-12 text-sm max-w-4xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
     <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
